feat(user-service): Implemented complete user-service functionality

--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -110,6 +110,10 @@
             <artifactId>rabbitmq</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
