--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-# user-service/src/main/resources/application.yml
 server:
   port: 8081
 
@@ -21,9 +20,25 @@ spring:
   flyway:
     enabled: true
     baseline-on-migrate: true
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 management:
   endpoints:
     web:
       exposure:
         include: health,info,metrics
+
+app:
+  jwt:
+    secret: your-secret-key-should-be-very-long-and-secure-in-production
+    expiration: 86400000  # 24 hours in milliseconds
+  rabbitmq:
+    exchange: smartcityfix.exchange
+    queue:
+      user-registered: smartcityfix.queue.user-registered
+    routing-key:
+      user-registered: smartcityfix.routing-key.user-registered
