--- a/notification-service/src/main/resources/application-docker.yml
+++ b/notification-service/src/main/resources/application-docker.yml
@@ -1,6 +1,7 @@
-# notification-service/src/main/resources/application-docker.yml
 spring:
   config:
     import: optional:configserver:http://config-service:8888
   datasource:
     url: jdbc:postgresql://postgres:5432/notification_service
+  rabbitmq:
+    host: rabbitmq
