--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
     import: optional:configserver:http://localhost:8888
   datasource:
     url: jdbc:postgresql://localhost:5432/user_service
-    username: postgres
-    password: postgres
+    username: ${DB_USER}
+    password: ${DB_USER}
   jpa:
     hibernate:
       ddl-auto: validate
@@ -34,7 +34,7 @@ management:
 
 app:
   jwt:
-    secret: your-secret-key-should-be-very-long-and-secure-in-production
+    secret: ${JWT_SECRET}
     expiration: 86400000  # 24 hours in milliseconds
   rabbitmq:
     exchange: smartcityfix.exchange
