--- a/feedback-service/src/main/resources/application-docker.yml
+++ b/feedback-service/src/main/resources/application-docker.yml
@@ -4,3 +4,5 @@ spring:
     import: optional:configserver:http://config-service:8888
   datasource:
     url: jdbc:postgresql://postgres:5432/feedback_service
+  rabbitmq:
+    host: rabbitmq
