--- a/feedback-service/src/main/resources/application.yml
+++ b/feedback-service/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
     import: optional:configserver:http://localhost:8888
   datasource:
     url: jdbc:postgresql://localhost:5432/feedback_service
-    username: postgres
-    password: postgres
+    username: ${DB_USER}
+    password: ${DB_PASS}
   jpa:
     hibernate:
       ddl-auto: validate
@@ -21,9 +21,50 @@ spring:
   flyway:
     enabled: true
     baseline-on-migrate: true
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 management:
   endpoints:
     web:
       exposure:
         include: health,info,metrics
+  health:
+    circuitbreakers:
+      enabled: true
+  endpoint:
+    health:
+      show-details: always
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      feedbackService:
+        registerHealthIndicator: true
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        permittedNumberOfCallsInHalfOpenState: 3
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        waitDurationInOpenState: 5s
+        failureRateThreshold: 50
+        eventConsumerBufferSize: 10
+  retry:
+    instances:
+      feedbackService:
+        maxAttempts: 3
+        waitDuration: 1s
+        enableExponentialBackoff: true
+        exponentialBackoffMultiplier: 2
+
+app:
+  rabbitmq:
+    exchange: smartcityfix.exchange
+    queue:
+      complaint-resolved: smartcityfix.queue.complaint-resolved
+      feedback-created: smartcityfix.queue.feedback-created
+    routing-key:
+      complaint-resolved: smartcityfix.routing-key.complaint-resolved
+      feedback-created: smartcityfix.routing-key.feedback-created
